<resources>
    <string name="app_name">Bowling Companion</string>
    <string name="title_activity_settings">Settings</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="changelog">Changelog</string>
    <string name="okay">Okay</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="query_delete_item">Delete %s?</string>
    <string name="dialog_delete_item_message">You can\'t recover this data once it\'s gone!</string>
    <string name="sort_items">Sort items</string>
    <string name="bowl">Bowl</string>
    <string name="begin">Begin</string>
    <string name="rate_prompt">If you like this app, please consider rating\u00A0it.</string>
    <string name="rate_app">Rate</string>
    <string name="rate_remind_me">Remind me later</string>
    <string name="rate_no">Don\'t ask again</string>
    <string name="error_unknown_title">An unknown error occurred!</string>
    <string name="error_unknown_message">Please try again later.</string>
    <string name="tab_record">Record</string>
    <string name="tab_statistics">Statistics</string>
    <string name="tab_equipment">Equipment</string>
    <string name="bowlers">Bowlers</string>
    <string name="teams">Teams</string>
    <string name="leagues">Leagues</string>
    <string name="events">Events</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="action_settings">Settings</string>
    <string name="action_transfer">Transfer data</string>
    <string name="action_save">Save</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_condensed_series">Condensed view</string>
    <string name="action_expanded_series">Expanded view</string>
    <string name="action_share">Share</string>
    <string name="action_stop_sharing">Stop sharing</string>
    <string name="action_overview">Overview</string>
    <string name="transfer_data">Transfer data</string>
    <string name="restore_or_delete">Restore or Delete</string>
    <string name="transfer_instructions_p1">This tool allows you to transfer your bowling data to a new device. Your data will be uploaded anonymously, and you can later download it onto a new device. Your data will be available to download for 1 hour to give you ample time to transfer to a new device.</string>
    <string name="transfer_instructions_p2">After you have imported the data on your new device, be sure to delete the backup.</string>
    <string name="transfer_step_1">1.\u00A0Export</string>
    <string name="transfer_step_2">2.\u00A0Import</string>
    <string name="transfer_step_3">3.\u00A0Restore or\u00A0delete</string>
    <string name="connecting_to_server">Connecting to server…</string>
    <string name="loading">Loading…</string>
    <string name="export">Export</string>
    <string name="transfer_export_instructions">Press \'Begin\' to upload your bowling data. When the upload finishes, you will receive a unique code that will allow you to download the data on a different device.</string>
    <string name="export_next_step">On your other device, open this menu and select option "2.\u00A0Import"</string>
    <string name="export_upload_complete">Upload complete! Your code:\n%s</string>
    <string name="export_upload_failed">Upload failed! Please try again.</string>
    <string name="uploading">Uploading…</string>
    <string name="data_import">Import</string>
    <string name="transfer_import_instructions">Enter your code below and press \'Begin\' to download your bowling data. When the download has finished, you will be prompted to load the new data, which will overwrite any other data on this device.</string>
    <string name="match_play_header">Match play</string>
    <string name="match_play_result">Result</string>
    <string name="hint_opponent_name">Opponent\'s name</string>
    <string name="hint_opponent_score">Opponent\'s score</string>
    <string name="action_reset_game">Reset game</string>
    <string name="action_best_possible">What if I strikeout?</string>
    <string name="action_set_score">Set manual score</string>
    <string name="action_clear_score">Clear manual score</string>
    <string name="match_play_none">None</string>
    <string name="match_play_won">Won</string>
    <string name="match_play_lost">Lost</string>
    <string name="match_play_tied">Tied</string>
    <string name="nav_bowlers_teams">Bowlers &amp; Teams</string>
    <string name="nav_leagues_events">Leagues &amp; Events</string>
    <string name="nav_series">Series</string>
    <string name="nav_game_1">Game 1</string>
    <string name="nav_game_2">Game 2</string>
    <string name="nav_game_3">Game 3</string>
    <string name="nav_game_4">Game 4</string>
    <string name="nav_game_5">Game 5</string>
    <string name="nav_game_6">Game 6</string>
    <string name="nav_game_7">Game 7</string>
    <string name="nav_game_8">Game 8</string>
    <string name="nav_game_9">Game 9</string>
    <string name="nav_game_10">Game 10</string>
    <string name="nav_game_11">Game 11</string>
    <string name="nav_game_12">Game 12</string>
    <string name="nav_game_13">Game 13</string>
    <string name="nav_game_14">Game 14</string>
    <string name="nav_game_15">Game 15</string>
    <string name="nav_game_16">Game 16</string>
    <string name="nav_game_17">Game 17</string>
    <string name="nav_game_18">Game 18</string>
    <string name="nav_game_19">Game 19</string>
    <string name="nav_game_20">Game 20</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_settings">Settings</string>
    <string name="pin_left_2">Left 2 Pin</string>
    <string name="pin_left_3">Left 3 Pin</string>
    <string name="pin_head">Head Pin</string>
    <string name="pin_right_3">Right 3 Pin</string>
    <string name="pin_right_2">Right 2 Pin</string>
    <string name="iv_clear_pins">Clear pins</string>
    <string name="iv_foul">Foul</string>
    <string name="iv_match_play">Match play settings</string>
    <string name="iv_lock">Lock game</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=ca.josephroque.bowlingcompanion</string>
    <string name="developer_website">http://josephroque.ca</string>
    <string name="open_source_repository">https://github.com/josephroqueca/bowling-companion</string>
    <string name="pref_category_general">General</string>
    <string name="pref_highlight_score_enabled_title">Highlight high games</string>
    <string name="pref_highlight_score_enabled_summary_on">High games will be highlighted</string>
    <string name="pref_highlight_score_enabled_summary_off">No games highlighted</string>
    <string name="pref_highlight_series_enabled_title">Highlight high series</string>
    <string name="pref_highlight_series_enabled_summary_on">High series will be highlighted</string>
    <string name="pref_highlight_series_enabled_summary_off">No series highlighted</string>
    <string name="pref_average_as_decimal_title">Show average as decimal?</string>
    <string name="pref_average_as_decimal_summary_on">Up to 1 decimal</string>
    <string name="pref_average_as_decimal_summary_off">No decimals</string>
    <string name="pref_category_scoring">Scoring</string>
    <string name="pref_enable_auto_advance_title">Enable auto advance?</string>
    <string name="pref_enable_auto_advance_summary_on">Frame will auto advance after inactivity</string>
    <string name="pref_enable_auto_advance_summary_off">Auto advance disabled</string>
    <string name="pref_auto_advance_time_title">Auto advance interval</string>
    <string name="pref_auto_advance_time_summary">Time of inactivity before advance</string>
    <string name="pref_auto_advance_time_dialog">Set auto advance interval</string>
    <string name="pref_enable_fab_title">Enable floating next button?</string>
    <string name="pref_enable_fab_summary_on">Next button available</string>
    <string name="pref_enable_fab_summary_off">Floating next button disabled</string>
    <string name="pref_pins_behind_fab_title">Extend pins behind floating button?</string>
    <string name="pref_pins_behind_fab_summary_on">Pins extend to bottom of screen</string>
    <string name="pref_pins_behind_fab_summary_off">Pins will not appear behind buttons</string>
    <string name="pref_enable_strike_highlights_title">Highlight marks?</string>
    <string name="pref_enable_strike_highlights_summary_on">Strikes and spares will be highlighted</string>
    <string name="pref_enable_strike_highlights_summary_off">Mark highlighting disabled</string>
    <string name="pref_enable_auto_lock_title">Auto lock games?</string>
    <string name="pref_enable_auto_lock_summary_on">Games will lock after final frame</string>
    <string name="pref_enable_auto_lock_summary_off">Games must be locked manually</string>
    <string name="pref_category_stats">Statistics</string>
    <string name="pref_include_events_title">Include events?</string>
    <string name="pref_include_events_summary_on">Bowler stats include events</string>
    <string name="pref_include_events_summary_off">Events not included in stats</string>
    <string name="pref_include_open_title">Include practice?</string>
    <string name="pref_include_open_summary_on">Bowler stats include practice games</string>
    <string name="pref_include_open_summary_off">Practice not included in stats</string>
    <string name="pref_count_h2_as_h_title">Count H2 as HP?</string>
    <string name="pref_count_h2_as_h_summary_on">H2 will add to headpin count</string>
    <string name="pref_count_h2_as_h_summary_off">Headpins won\'t include H2</string>
    <string name="pref_count_s2_as_s_title">Count S2 as SP?</string>
    <string name="pref_count_s2_as_s_summary_on">S2 will add to split count</string>
    <string name="pref_count_s2_as_s_summary_off">Splits won\'t include S2</string>
    <string name="pref_category_match_play">Match play</string>
    <string name="pref_show_match_results_title">Show match play results?</string>
    <string name="pref_show_match_results_summary_on">Series show match play results</string>
    <string name="pref_show_match_results_summary_off">Match play results hidden</string>
    <string name="pref_highlight_match_results_title">Highlight match play results?</string>
    <string name="pref_highlight_match_results_summary_on">Wins and losses highlighted</string>
    <string name="pref_highlight_match_results_summary_off">Match play highlights disabled</string>
    <string name="pref_category_feedback">Feedback</string>
    <string name="pref_rate_title">Rate the app</string>
    <string name="pref_rate_summary">Your feedback is appreciated</string>
    <string name="pref_report_bug_title">Report a bug</string>
    <string name="pref_report_bug_summary">Help the app work better for you</string>
    <string name="pref_send_feedback_title">Send feedback</string>
    <string name="pref_send_feedback_summary">Provide comments and suggestions</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_facebook_title">Visit us on Facebook</string>
    <string name="pref_facebook_summary">For news and updates</string>
    <string name="pref_developer_website_title">Visit the developer website</string>
    <string name="pref_developer_website_summary">To learn more about the developer</string>
    <string name="pref_view_source_title">View source on GitHub</string>
    <string name="pref_view_source_summary">Check out the open source repository</string>
    <string name="pref_attributions_title">Open Source Libraries</string>
    <string name="pref_attributions_summary">Libraries we depend on</string>
    <string name="pref_version_title">App version</string>
    <string name="pref_version_summary">Version unknown</string>
</resources>