<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_enable_auto_advance"
        android:summary="@string/pref_enable_auto_advance_summaryOff"
        android:title="@string/pref_enable_auto_advance_title" />

    <ListPreference
        android:dependency="pref_enable_auto_advance"
        android:dialogTitle="@string/pref_auto_advance_time_dialog"
        android:entries="@array/pref_auto_advance_times"
        android:entryValues="@array/pref_auto_advance_times"
        android:key="pref_auto_advance_time"
        android:summary="@string/pref_auto_advance_time_summary"
        android:title="@string/pref_auto_advance_time_title" />

</PreferenceScreen>