<LinearLayout
    style="@style/BaseContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="normal"
        android:text="@string/rate_prompt" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/btn_rate"
        android:text="@string/rate_app" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/btn_rate_remind_me"
        android:text="@string/rate_remind_me" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/btn_rate_no"
        android:text="@string/rate_no" />

</LinearLayout>
