<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_set_score"
        android:orderInCategory="4"
        android:title="@string/action_set_score"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_score"
        android:orderInCategory="5"
        android:title="@string/action_clear_score"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_best_possible"
        android:orderInCategory="6"
        android:title="@string/action_best_possible"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset_game"
        android:orderInCategory="7"
        android:title="@string/action_reset_game"
        app:showAsAction="never" />

</menu>
