<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        style="@style/PinButton"
        android:id="@+id/iv_pin_1"
        android:contentDescription="@string/pin_left_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_pin_2" />

    <ImageView
        style="@style/PinButton"
        android:id="@+id/iv_pin_2"
        android:contentDescription="@string/pin_left_3"
        app:layout_constraintLeft_toRightOf="@id/iv_pin_1"
        app:layout_constraintRight_toLeftOf="@id/iv_pin_3" />

    <ImageView
        style="@style/PinButton"
        android:id="@+id/iv_pin_3"
        android:contentDescription="@string/pin_head"
        app:layout_constraintLeft_toRightOf="@id/iv_pin_2"
        app:layout_constraintRight_toLeftOf="@id/iv_pin_4" />

    <ImageView
        style="@style/PinButton"
        android:id="@+id/iv_pin_4"
        android:contentDescription="@string/pin_right_3"
        app:layout_constraintLeft_toRightOf="@id/iv_pin_3"
        app:layout_constraintRight_toLeftOf="@id/iv_pin_5" />

    <ImageView
        style="@style/PinButton"
        android:id="@+id/iv_pin_5"
        android:contentDescription="@string/pin_right_2"
        app:layout_constraintLeft_toRightOf="@id/iv_pin_4"
        app:layout_constraintRight_toRightOf="parent" />

</merge>
