<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sheet_match_play"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_sheet_height"
    android:background="@color/colorBackground"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout style="@style/BaseContainer">

        <TextView
            style="@style/HeaderText"
            android:text="@string/match_play_header" />

        <android.support.design.widget.TextInputLayout
            style="@style/BodyText"
            android:id="@+id/input_layout_opponent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_opponent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:imeOptions="flagNoFullscreen|actionNext"
                android:hint="@string/hint_opponent_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/BodyText"
            android:id="@+id/input_layout_opponent_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_opponent_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="flagNoFullscreen|actionDone"
                android:hint="@string/hint_opponent_score"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/SubHeaderText"
            android:text="@string/match_play_result" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/radio_match_play_none"
                android:text="@string/match_play_none" />

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/radio_match_play_won"
                android:text="@string/match_play_won" />

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/radio_match_play_lost"
                android:text="@string/match_play_lost" />

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/radio_match_play_tied"
                android:text="@string/match_play_tied" />

        </RadioGroup>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
