<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_record"
        android:enabled="true"
        android:icon="@drawable/ic_play_arrow"
        android:title="@string/tab_record"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_statistics"
        android:enabled="true"
        android:icon="@drawable/ic_stats"
        android:title="@string/tab_statistics"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_equipment"
        android:enabled="true"
        android:icon="@drawable/ic_equipment"
        android:title="@string/tab_equipment"
        app:showAsAction="ifRoom" />

</menu>
